--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,13 @@ asgiref==3.8.1
 Django==5.2.1
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
+et_xmlfile==2.0.0
 gunicorn==23.0.0
 numpy==2.2.6
+openpyxl==3.1.5
 packaging==25.0
 pandas==2.2.3
+psycopg2==2.9.10
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytz==2025.2
